# reddit-graph

./: .gitignore  Dockerfile  README.md  build.sh  main.py  manage.py  pyproject.toml  requirements.txt  settings.py
app/: constants.py  crawler.py  helpers.py  reddit.py
app/actions/: __init__.py  links.py  queue.py  relations.py  release.py  subreddits.py
app/fetch/: __init__.py  relations.py  subreddits.py
app/jobs/: analyze.py  check.py  clear_queue.py  fetch.py  fill_queue.py  helpers.py  main.py  subreddits.py
app/migrations/: 0001_initial.py  0002_alter_subreddit_created_at_and_more.py  0002_remove_subreddit_name_alter_relation_type_and_more.py  0003_rename_updated_at_subreddit_last_update.py  0003_subreddit_color_subreddit_icon_url_subreddit_name_and_more.py  0004_alter_subreddit_nsfw_alter_subreddit_quarantined.py  0005_alter_relation_source_alter_relation_target.py  0006_alter_queue_name_alter_relation_id_and_more.py  0007_alter_relation_id_relation_id.py  0008_alter_relation_id.py  0009_relation_version_subreddit_version.py  0010_subreddit_description.py  0011_subreddit_banner_url_alter_subreddit_description.py  0012_rename_banner_url_subreddit_img_banner_and_more.py  0013_subreddit_img_header.py  0014_rename_last_update_subreddit_updated_at_and_more.py  0015_alter_subreddit_updated_at.py  0016_alter_subreddit_subscribers.py  0017_alter_subreddit_nsfw_alter_subreddit_quarantined.py  0018_alter_subreddit_subscribers.py  0019_queue_priority.py  0020_alter_queue_created_at_alter_queue_updated_at_and_more.py  0021_alter_subreddit_type.py  0022_subreddit_new_alter_relation_type.py  0023_error.py  0024_rename_relation_link_alter_subreddit_type_and_more.py
container/: build.sh  deploy.sh
release/: make.sh  readme.py
(+34 files in other folders)
