[tool.poetry]
name = "reddit-graph"
version = "0.1.0"
description = "Graph representation of Reddit"
license = "MIT"
readme = "README.md"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
django = "^4.0.6"
python = "^3.8"
praw = "^7.6.0"
requests = "^2.28.1"
pytz = "^2022.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
ddt = "^1.6.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
